Wire up the notes view making use of a new TextView class in PLBindableControls.

--- a/Examples/TodoApp/Base.lproj/ChecklistView.xib
+++ b/Examples/TodoApp/Base.lproj/ChecklistView.xib
@@ -79,7 +79,7 @@
                                                     <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioO-mI-o7k" customClass="Label" customModule="PLBindableControls">
                                                         <rect key="frame" x="170" y="3" width="110" height="18"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" title="hi" id="z0P-Fr-Mfb">
+                                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" id="z0P-Fr-Mfb">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
